# cpp_project_template

./: CMakeLists.txt  README.md
.vim/: cc.vimrc  vimrc.basic
